# rust-gpu

./: Cargo.toml
api/: search-index.js
book/: 404.html  attributes.html
crates/rustc_codegen_spirv/src/: abi.rs
crates/spirv-std/src/: lib.rs  storage_class.rs
debug-printf-panic/: Cargo.toml
debug-printf-panic/shader/: Cargo.toml
debug-printf-panic/shader/src/: lib.rs
debug-printf-panic/src/: main.rs
docs/src/rfcs/: 00X-global-buffer.md
tests/ui/lang/core/array/: init_array_f32.rs  init_array_i32.rs  init_array_i32_default.rs  init_array_i32_list.rs  init_array_i32_one.rs
