[package]
name = "debug-printf-panic"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytemuck = "1.13.1"
spirv-builder = { version = "0.7.0", default-features = false }
spirv-tools = { version = "0.9.0", default-features = false }
spirv_cross = { version = "0.23.1", features = ["glsl"] }

[features]
default = ["use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools", "spirv-tools/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools", "spirv-tools/use-compiled-tools"]
